# MakeItParquet

./: .gitignore  DataTad.py  DataTadpole.py  DuckConvert.py  LICENSE  README.md  cli.py  cli_interface.py  cli_parser.py  conversion_manager.py  conversions.py  converters.py  excel_utils.py  extension_mapping.py  file_information.py  make_it_parquet.py  path_manager.py  pyproject.toml  requirements.txt  structure.md  testing.py
Make_It_Parquet/: actual_conversion_manager.py  conversion_data.py  conversion_manager.py  converters.py  extension_mapping.py  file_information.py  file_manager.py  main.py  make_it_parquet.py  redundant_code.py
Make_It_Parquet/user_interface/: cli_parser.py  interactive.py  logger.py  prompts.py  settings.py
tests/: test_file_information.py
tests/files_for_testing_with/: generate_golden_files_and_data.py  golden_info.py
tests/test_user_interface/: test_cli_parser.py  test_logger.py  test_settings.py
user_interface/: cli_parser.py  interactive.py  logger.py  settings.py
