[project]
name = "Make-it-Parquet"
version = "0.1.0"
description = "A file conversion tool powered by DuckDB."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "pytest-mock",
  "isort",
  "mypy",
  "ruff",
  "coverage",
  "debugpy",
  "bandit",
]